# Vilka-backend

./: .env_example  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
migrations/models/: 2_20221024135417_None.py
migrations/user/: 0_20221025163615_init.py  0_20221118122804_init.py  0_20221118143134_init.py  1_20221207162834_None.py
src/: exceptions.py
src/authorization/: models.py  routers.py
src/authorization/db/models/: base.py  friends.py  user.py
src/authorization/utils/: auth.py  utils.py
src/config/: constants.py  settings.py
src/db/: managers.py  validators.py
src/db/models/: __init__.py  base.py  friends.py  photos.py  user.py
src/pydantic_models/: friends.py
src/routers/: friendship.py  profile_picture.py  user.py
src/utils/: auth.py
srv/app/: Dockerfile
srv/webserver/conf.d/: nginx.conf
